# ml_forest

./: .gitignore  README.md  config.py  pyproject.toml
src/ml_forest/: eda.py  train.py
tests/: test_ml_forest.py
