[tool.poetry]
name = "ml_forest"
version = "0.1.0"
description = ""
authors = ["codekot <gennadii.shamshurin@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.9"
pandas-profiling = "^3.1.0"
pandas = "1.3.5"
sklearn = "^0.0"
joblib = "^1.1.0"

[tool.poetry.dev-dependencies]
pytest = "^5.2"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.scripts]
eda = "ml_forest.eda:eda"
train = 'ml_forest.train:train'
